crates/sutura-app/tests/snapshots/revenue-by-region-and-channel__params@duckdb.snap
---
source: crates/sutura-app/tests/golden.rs
expression: query.params()
---
- Date:
    year: 2026
    month: 6
    day: 1
- Date:
    year: 2026
    month: 8
    day: 1
