crates/sutura-app/tests/snapshots/revenue-by-region-and-channel__rows@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
region	channel	period	revenue
Text(north)	Text(store)	Text(2026-06-01)	Integer(25072)
Text(north)	Text(web)	Text(2026-06-01)	Integer(200000)
Text(north)	Text(web)	Text(2026-07-01)	Integer(10000)
Text(south)	Text(store)	Text(2026-06-01)	Integer(45050)
Text(south)	Text(store)	Text(2026-07-01)	Integer(20000)
Text(south)	Text(web)	Text(2026-06-01)	Integer(199900)
Text(west)	Text(store)	Text(2026-06-01)	Integer(1)
Text(west)	Text(web)	Text(2026-07-01)	Integer(30000)
Null	Text(web)	Text(2026-06-01)	Integer(99999)
