crates/sutura-app/tests/snapshots/revenue-by-region-and-channel__sql@clickhouse.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT "customers"."region_code" AS "region", "orders"."channel" AS "channel", CAST(dateTrunc('month', "orders"."order_date") AS DATE) AS "period", sum("orders"."amount_cents") AS "revenue" FROM "orders" LEFT JOIN "customers" ON "orders"."customer_id" = "customers"."id" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? GROUP BY "customers"."region_code", "orders"."channel", CAST(dateTrunc('month', "orders"."order_date") AS DATE) ORDER BY "customers"."region_code", "orders"."channel", CAST(dateTrunc('month', "orders"."order_date") AS DATE) LIMIT 10001
