crates/sutura-app/tests/snapshots/revenue-by-region-and-channel__sql@postgres.snap
---
source: crates/sutura-app/tests/golden.rs
expression: query.sql()
---
SELECT "customers"."region_code" AS "region", "orders"."channel" AS "channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) AS "period", SUM("orders"."amount_cents") AS "revenue" FROM "orders" JOIN "customers" ON "orders"."customer_id" = "customers"."id" WHERE "orders"."order_date" >= $1 AND "orders"."order_date" < $2 GROUP BY "customers"."region_code", "orders"."channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) ORDER BY "customers"."region_code", "orders"."channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) LIMIT 10000
